# scurry

./: .bazelrc  .gitignore  .golangci.yml  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  TODO-pj-qol.md  go.mod  go.sum  main.go
.agents/skills/fix-error/: SKILL.md
.github/workflows/: ci.yml  release.yml
actions/setup/: action.yml
actions/testdb/: action.yml
cmd/: BUILD.bazel  checkpoint.go  checkpoint_test.go  data.go  data_dump.go  data_load.go  debug.go  debug_test.go  dump.go  generate.go  generate_enums.go  generate_enums_test.go  lint.go  lint_test.go  migration.go  migration_catchup.go  migration_execute.go  migration_execute_local.go  migration_execute_local_test.go  migration_execute_test.go  migration_gen.go  migration_new.go  migration_recover.go  migration_sig_test.go  migration_squash.go  migration_squash_test.go  migration_table_sizes.go  migration_test.go  migration_validate.go  push.go  push_test.go  root.go  testserver.go  validate.go  version.go
flags/: common.go
internal/data/: BUILD.bazel  compat.go  compat_test.go  dump.go  dump_test.go  format.go  format_test.go  load.go  load_test.go
internal/db/: BUILD.bazel  checkpoint_cache.go  checkpoint_cache_test.go  client.go  client_test.go  ddl.go  ddl_test.go  migration_exec.go  migration_race_test.go  migration_schema.go  migrations.go  migrations_test.go  shadow.go  table_sizes.go
internal/db/schema/: migrations_table.sql
internal/flags/: BUILD.bazel  common.go
internal/generate/: BUILD.bazel  enums.go  enums_test.go
internal/migration/: BUILD.bazel  classify.go  classify_test.go  header.go  header_test.go  table_sizes.go  table_sizes_test.go
internal/recovery/: BUILD.bazel  recovery.go  recovery_test.go
internal/schema/: BUILD.bazel  computed_column_fix_test.go  dependencies.go  diff.go  diff_test.go  enum_rename.go  enum_rename_apply_test.go  enum_rename_test.go  expressions.go  expressions_test.go  families.go  format.go  migrations.go  migrations_test.go  names.go  order.go  order_test.go  providers.go  routines.go  schema.go  schema_test.go  sequences.go  sequences_test.go  tables.go  tables_test.go  transaction_boundaries_test.go  triggers.go  triggers_test.go  type_equal.go  type_equal_test.go  types.go  types_test.go  utils.go  views.go  views_test.go
internal/set/: BUILD.bazel  set.go
internal/ui/: BUILD.bazel  styles.go
