load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/pjtatlow/scurry

gazelle(name = "gazelle")

go_binary(
    name = "scurry",
    embed = [":scurry_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "scurry_lib",
    srcs = ["main.go"],
    importpath = "github.com/pjtatlow/scurry",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)
