module(
    name = "scurry",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Use the Go toolchain installed on the host rather than downloading one.
# To download a specific version instead, replace with:
#   go_sdk.download(version = "1.23.0")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# grpc-gateway v1 ships its own BUILD files using the old go_default_library
# naming convention. Force gazelle to regenerate them with modern naming so
# that transitive consumers (like cockroachdb-parser) can resolve targets.
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/grpc-ecosystem/grpc-gateway",
)
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/grpc-ecosystem/grpc-gateway/v2",
)

# cockroachdb-parser ships pre-generated .pb.go files but its BUILD files
# exclude them from go_library targets. Regenerate to include all Go sources.
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/cockroachdb/cockroachdb-parser",
)

# genproto ships proto-generated Go files but gazelle doesn't generate BUILD
# files for all subdirectories by default. Regenerate with proto disabled.
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
    path = "google.golang.org/genproto",
)

# Run `bazel mod tidy` to automatically populate this block with all
# external Go repositories referenced by the BUILD files.
use_repo(go_deps, "com_github_alecthomas_chroma_v2", "com_github_charmbracelet_huh", "com_github_charmbracelet_lipgloss", "com_github_cockroachdb_cockroach_go_v2", "com_github_cockroachdb_cockroachdb_parser", "com_github_lib_pq", "com_github_spf13_afero", "com_github_spf13_cobra", "com_github_stretchr_testify", "in_gopkg_yaml_v3")
