load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "checkpoint.go",
        "data.go",
        "data_dump.go",
        "data_load.go",
        "debug.go",
        "dump.go",
        "generate.go",
        "generate_enums.go",
        "lint.go",
        "migration.go",
        "migration_execute.go",
        "migration_gen.go",
        "migration_new.go",
        "migration_recover.go",
        "migration_table_sizes.go",
        "migration_validate.go",
        "push.go",
        "root.go",
        "testserver.go",
        "validate.go",
        "version.go",
    ],
    importpath = "github.com/pjtatlow/scurry/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/data",
        "//internal/db",
        "//internal/flags",
        "//internal/generate",
        "//internal/migration",
        "//internal/recovery",
        "//internal/schema",
        "//internal/ui",
        "@com_github_charmbracelet_huh//:huh",
        "@com_github_cockroachdb_cockroachdb_parser//pkg/sql/parser",
        "@com_github_cockroachdb_cockroachdb_parser//pkg/sql/sem/tree",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "cmd_test",
    srcs = [
        "checkpoint_test.go",
        "debug_test.go",
        "generate_enums_test.go",
        "lint_test.go",
        "migration_test.go",
        "push_test.go",
    ],
    embed = [":cmd"],
    deps = [
        "//internal/db",
        "//internal/flags",
        "//internal/schema",
        "@com_github_cockroachdb_cockroachdb_parser//pkg/sql/parser",
        "@com_github_cockroachdb_cockroachdb_parser//pkg/sql/sem/tree",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
