load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "generate",
    srcs = ["enums.go"],
    importpath = "github.com/pjtatlow/scurry/internal/generate",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "generate_test",
    srcs = ["enums_test.go"],
    embed = [":generate"],
    deps = ["@com_github_stretchr_testify//assert"],
)
