load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "recovery",
    srcs = ["recovery.go"],
    importpath = "github.com/pjtatlow/scurry/internal/recovery",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/db",
        "//internal/ui",
        "@com_github_charmbracelet_huh//:huh",
    ],
)

go_test(
    name = "recovery_test",
    srcs = ["recovery_test.go"],
    embed = [":recovery"],
    deps = [
        "//internal/db",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
