load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ui",
    srcs = ["styles.go"],
    importpath = "github.com/pjtatlow/scurry/internal/ui",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_alecthomas_chroma_v2//formatters",
        "@com_github_alecthomas_chroma_v2//lexers",
        "@com_github_alecthomas_chroma_v2//styles",
        "@com_github_charmbracelet_huh//:huh",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_mattn_go_isatty//:go-isatty",
    ],
)
